# QEMesh

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  REPORT.md  figure.py  imgui.ini  results.tsv  results_Arma.tsv  results_new.tsv
scripts/: batch_simplify.sh
src/cli/: main.cpp
src/core/: HalfEdgeMesh.cpp  HalfEdgeMesh.h  Mesh.cpp  Mesh.h  Quadric.h  Simplify.cpp  Simplify.h  Tsv.cpp  Tsv.h  Vec3.h
src/viewer/: Math.h  Shader.cpp  Shader.h  main.cpp
